--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-<title>2nd Assignment of BS5</title>
+<title>3rd Assignment of BS5</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="index.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -10,12 +10,58 @@
 </head>
 <body>
 
-<div class ="container">
-<p class="text-center text-decoration-underline">Card Bootstrap5</p>
+<div class ="container-fluid full-width">
+
+<! -- navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container">
+   <a class="navbar-brand" href="#">Summer-Camp</a>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class= "nav-item">
+           <a class="nav-link" href="#">Blog</a>
+        </li>
+        <li class="nav-item">
+          <a class ="nav-link" href="#">Contact</a>
+       </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<! -- end navbar -->
+
+
+<!-- bgimg -->
+<div class ="bg_img container-fluid">
+<div class="bg_content col-6 col-12">
+<div class="padcustome">
+<h3>Just Chilling</h3>
+<p>Lorem Ipsum este pur şi simplu o machetă pentru text a industriei tipografice.
+Lorem Ipsum a fost macheta standard a industriei încă din secolul al XVI-lea,
+</p>
+<button class="btn btn-primary">Click Me! </button>
+</div>
+</div>
+</div>
+<!-- bgimg -->
+
+
+<p class="text-center text-decoration-underline">Seasonal Camp</p>
+<div class="container">
 <div class="row mb-3 text-capitalize">
-<div class="col-sm-4">
+<div class="col col-sm-4 mb-2">
 <!-- starting firstcard -->
-<div class="card" style="width:350px; height:100%">
+<div class="card" style=" height:100%">
 <div class="card-img-top"><img src="BS5/AS2/image/summer.jpg" class="imgwidth" alt="summerday"/></div>
 <div class="card-body">
 <p class="card-title fw-bold">Summer Day</p>
@@ -29,9 +75,9 @@ Lorem Ipsum a fost macheta standard a industriei încă din secolul al XVI-lea,
 <!-- Ending firstcard -->
 </div>
 
-<div class="col-sm-4">
+<div class="col col-sm-4 mb-2 ">
 <!-- starting secondcard -->
-<div class="card" style="width:350px;height:100%">
+<div class="card" style="height:100%">
 <div class="card-img-top"><img src="BS5/AS2/image/winter.jpg" class="imgwidth" alt="winterday" /></div>
 <div class="card-body">
 <p class="card-title fw-bold">Winter Day</p>
@@ -46,9 +92,9 @@ Lorem Ipsum a fost macheta standard a industriei încă din secolul al XVI-lea,
 <!-- Ending secondcard -->
 </div>
 
-<div class="col-sm-4">
+<div class="col col-sm-4 mb-2">
 <!-- starting thirdcard -->
-<div class="card" style="width:350px;height:100%">
+<div class="card" style="height:100%">
 <div class="card-img-top"><img src="BS5/AS2/image/spring.jpg" class="imgwidth" alt="springday"/></div>
 <div class="card-body">
 <p class="card-title fw-bold">Spring Day</p>
@@ -62,142 +108,15 @@ Lorem Ipsum a fost macheta standard a industriei încă din secolul al XVI-lea,
 <!-- Ending thirdcard -->
 </div>
 </div><!-- 1strow -->
-
-<div class="row mb-3 text-capitalize">
-<div class="col-4">
-<!-- starting fourthcard -->
-<div class="card" style="width:350px;height:100%">
-<div class="card-img-top"><img src="BS5/AS2/image/autumn.jpg" class="imgwidth" alt="autumnday"/></div>
-<div class="card-body">
-<p class="card-title fw-bold">Autumn Day</p>
-<p class="card-paragraph">
-Lorem Ipsum este pur şi simplu o machetă pentru text a industriei tipografice.
-Lorem Ipsum a fost macheta standard a industriei încă din secolul al XVI-lea,
-</p>
-<button class="btn btn-secondary btn-sm">FourthCard</button>
-</div>
-</div>
-<!-- Ending fourthcard -->
 </div>
 
-<div class="col-4">
-<!-- starting fifthcard -->
-<div class="card" style="width:350px;height:100%">
-<div class="card-img-top"><img src="BS5/AS2/image/monsoon.jpg" class="imgwidth" alt="monsoonday"/></div>
-<div class="card-body">
-<p class="card-title fw-bold">Monsoon Day</p>
-<p class="card-paragraph">
-Lorem Ipsum este pur şi simplu o machetă pentru text a industriei tipografice.
-Lorem Ipsum a fost macheta standard a industriei încă din secolul al XVI-lea,
-</p>
-<button class="btn btn-primary btn-sm">FifthCard</button>
-</div>
-</div>
-<!-- Ending fifthCard -->
-</div>
+<!-- footer -->
 
-<div class="col-4">
-<!-- starting sixthcard -->
-<div class="card" style="width:350px;height:100%">
-<div class="card-img-top"><img src="BS5/AS2/image/summer.jpg" class="imgwidth" alt="summerday"/></div>
-<div class="card-body">
-<p class="card-title fw-bold">Summer Day</p>
-<p class="card-paragraph">
-Lorem Ipsum este pur şi simplu o machetă pentru text a industriei tipografice.
-Lorem Ipsum a fost macheta standard a industriei încă din secolul al XVI-lea,
-</p>
-<button class="btn btn-warning btn-sm">SixthCard</button>
-</div>
-</div>
-<!-- Ending sixthcard -->
-</div>
-</div><!-- row2nd -->
+  <div class="d-flex justify-content-center align-items-center bg-light full-width">
+    <p class="text-center p-2">Footer @copyright2021</p>
+  </div>
 
-<!-- row3 -->
-<div class="row">
-<div class ="col-12">
-<p class="text-center text-decoration-underline">Table Bootstrap</p>
-
-<table class="table table-striped table-info text-capitalize">
-
-<thead>
-<tr>
-<th>#</th>
-<th>Name</th>
-<th>Surname</th>
-<th>Gender</th>
-<th>Subject</th>
-<th>Hobbies</th>
-<th>Grade</th>
-</tr>
-</thead>
-
-<tbody>
-<tr>
-<th>1</th>
-<td>john</td>
-<td>thomas</td>
-<td>male</td>
-<td>english</td>
-<td>hockey</td>
-<td>k</td>
-</tr>
-
-<tr>
-<th>2</th>
-<td>neil</td>
-<td>bhatt</td>
-<td>male</td>
-<td>math</td>
-<td>marketing</td>
-<td>a</td>
-</tr>
-
-<tr>
-<th>3</th>
-<td>fady</td>
-<td>walnut</td>
-<td>male</td>
-<td>science</td>
-<td>skipping</td>
-<td>b</td>
-</tr>
-
-<tr>
-<th>4</th>
-<td>tintin</td>
-<td>jack</td>
-<td>male</td>
-<td>english</td>
-<td>boxing</td>
-<td>d</td>
-</tr>
-
-<tr>
-<th>5</th>
-<td>johnson</td>
-<td>tidy</td>
-<td>male</td>
-<td>science</td>
-<td>hockey</td>
-<td>a</td>
-</tr>
-
-<tr>
-<th>6</th>
-<td>lily</td>
-<td>thomas</td>
-<td>female</td>
-<td>social science</td>
-<td>designer</td>
-<td>b</td>
-</tr>
-</tbody>
-
-</table>
-</div>
-</div>
-<!-- row3 -->
+<!-- footer -->
 
 </div><!-- container -->
 </body>
